tests/expectations/compiler/finalize/closure_with_finalize_fail.out
Error [ETYC0372110]: Only `async transition` can return a future.
    --> compiler-test:6:25
     |
   6 | fn foo(a: u8, b: u8) -> Final {
     |                         ^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:7:12
     |
   7 |     return finalize_bar(a, b);
     |            ^^^^^^^^^^^^^^^^^^
Error [ETYC0372101]: Can only make an async call from an async transition.
    --> compiler-test:7:12
     |
   7 |     return finalize_bar(a, b);
     |            ^^^^^^^^^^^^^^^^^^
     |
     = Move the async call inside of the async transition block.
Error [ETYC0372106]: An async function is not allowed to return a value.
    --> compiler-test:14:1
     |
  14 | onchain fn finalize_bar(a: u8, b: u8) -> u8 {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  15 |     return a + b;
     |     ^^^^^^^^^^^^^
  16 | }
     | ^
     |
     = Remove an output type in the function signature, and remove the return statement from the function. Note that the future returned by async functions is automatically inferred, and must not be explicitly written.
Error [ETYC0372110]: Only `async transition` can return a future.
    --> compiler-test:19:51
     |
  19 | fn mint_public(receiver: address, amount: u64) -> Final {
     |                                                   ^^^^^
     |
     = Use an `async transition` instead.
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:20:12
     |
  20 |     return finalize_mint(receiver, amount);
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372101]: Can only make an async call from an async transition.
    --> compiler-test:20:12
     |
  20 |     return finalize_mint(receiver, amount);
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Move the async call inside of the async transition block.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
